# BurstyLimiter

./: .gitignore  pyproject.toml
.github/workflows/: python-app.yml
tests/: test_burst.py  test_limiter.py  test_limiter2.py
