[project]
name = "burstylimiter"
version = "0.1.0"
description = ""
authors = [
    {name = "feba66",email = "Felix Baumkötter <feba66@web.de>"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
pytest = "^8.3.4"

